--- a/src/app/tasks/pages/tasks.component.scss
+++ b/src/app/tasks/pages/tasks.component.scss
@@ -9,5 +9,5 @@
 }
 
 .task-views {
-    overflow: hidden;
+    overflow: auto;
 }
